Adds sidebar label texts.

--- a/docs/develop/node/node-crash-course/advancedstreams/index-advancedstreams.mdx
+++ b/docs/develop/node/node-crash-course/advancedstreams/index-advancedstreams.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-advancedstreams
 title: TODO
-sidebar_label: TODO
+sidebar_label: Advanced Streams
 slug: /develop/node/nodecrashcourse/advancedstreams
 ---
 
