--- a/docs/develop/node/node-crash-course/caching/index-caching.mdx
+++ b/docs/develop/node/node-crash-course/caching/index-caching.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-caching
 title: TODO
-sidebar_label: TODO
+sidebar_label: Caching
 slug: /develop/node/nodecrashcourse/caching
 ---
 
