--- a/docs/develop/node/node-crash-course/checkinswithstreams/index-checkinswithstreams.mdx
+++ b/docs/develop/node/node-crash-course/checkinswithstreams/index-checkinswithstreams.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-checkinswithstreams
 title: TODO
-sidebar_label: TODO
+sidebar_label: Checkins with Streams
 slug: /develop/node/nodecrashcourse/checkinswithstreams
 ---
 
