--- a/docs/develop/node/node-crash-course/coursewrapup/index-coursewrapup.mdx
+++ b/docs/develop/node/node-crash-course/coursewrapup/index-coursewrapup.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-coursewrapup
 title: TODO
-sidebar_label: TODO
+sidebar_label: Wrap Up
 slug: /develop/node/nodecrashcourse/coursewrapup
 ---
 
