--- a/docs/develop/node/node-crash-course/domainobjectswithhashes/index-domainobjectswithhashes.mdx
+++ b/docs/develop/node/node-crash-course/domainobjectswithhashes/index-domainobjectswithhashes.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-domainobjectswithhashes
 title: TODO
-sidebar_label: TODO
+sidebar_label: Domain Objects with Hashes
 slug: /develop/node/nodecrashcourse/domainobjectswithhashes
 ---
 
