--- a/docs/develop/node/node-crash-course/introducingredisinsight/index-introducingredisinsight.mdx
+++ b/docs/develop/node/node-crash-course/introducingredisinsight/index-introducingredisinsight.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-introducingredisinsight
 title: TODO
-sidebar_label: TODO
+sidebar_label: Introducing RedisInsight
 slug: /develop/node/nodecrashcourse/introducingredisinsight
 ---
 
