--- a/docs/develop/node/node-crash-course/introductiontomodules/index-introductiontomodules.mdx
+++ b/docs/develop/node/node-crash-course/introductiontomodules/index-introductiontomodules.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-introductiontomodules
 title: TODO
-sidebar_label: TODO
+sidebar_label: Introduction to Modules
 slug: /develop/node/nodecrashcourse/introductiontomodules
 ---
 
