--- a/docs/develop/node/node-crash-course/managingsuccess/index-managingsuccess.mdx
+++ b/docs/develop/node/node-crash-course/managingsuccess/index-managingsuccess.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-managingsuccess
 title: TODO
-sidebar_label: TODO
+sidebar_label: Managing Success
 slug: /develop/node/nodecrashcourse/managingsuccess
 ---
 
