--- a/docs/develop/node/node-crash-course/redisandnodejs/index-redisandnodejs.mdx
+++ b/docs/develop/node/node-crash-course/redisandnodejs/index-redisandnodejs.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisandnodejs
-title: TODO
-sidebar_label: TODO
+title: Using Redis from Node.js
+sidebar_label: Redis and Node.js
 slug: /develop/node/nodecrashcourse/redisandnodejs
 ---
 
