--- a/docs/develop/node/node-crash-course/redisearch/index-redisearch.mdx
+++ b/docs/develop/node/node-crash-course/redisearch/index-redisearch.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisearch
 title: TODO
-sidebar_label: TODO
+sidebar_label: RediSearch
 slug: /develop/node/nodecrashcourse/redisearch
 ---
 
