--- a/docs/develop/node/node-crash-course/redisjson/index-redisjson.mdx
+++ b/docs/develop/node/node-crash-course/redisjson/index-redisjson.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisjson
 title: TODO
-sidebar_label: TODO
+sidebar_label: RedisJSON
 slug: /develop/node/nodecrashcourse/redisjson
 ---
 
