--- a/docs/develop/node/node-crash-course/runningtheapplication/index-runningtheapplication.mdx
+++ b/docs/develop/node/node-crash-course/runningtheapplication/index-runningtheapplication.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-runningtheapplication
 title: TODO
-sidebar_label: TODO
+sidebar_label: Running the Application
 slug: /develop/node/nodecrashcourse/runningtheapplication
 ---
 
