--- a/docs/develop/node/node-crash-course/sampleapplicationoverview/index-sampleapplicationoverview.mdx
+++ b/docs/develop/node/node-crash-course/sampleapplicationoverview/index-sampleapplicationoverview.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-sampleapplicationoverview
 title: TODO
-sidebar_label: TODO
+sidebar_label: Sample Application Overview
 slug: /develop/node/nodecrashcourse/sampleapplicationoverview
 ---
 
