--- a/docs/develop/node/node-crash-course/sessionstorage/index-sessionstorage.mdx
+++ b/docs/develop/node/node-crash-course/sessionstorage/index-sessionstorage.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-sessionstorage
 title: TODO
-sidebar_label: TODO
+sidebar_label: Session Storage
 slug: /develop/node/nodecrashcourse/sessionstorage
 ---
 
