--- a/docs/develop/node/node-crash-course/whatisredis/index-whatisredis.mdx
+++ b/docs/develop/node/node-crash-course/whatisredis/index-whatisredis.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-whatisredis
-title: TODO
-sidebar_label: TODO
+title: "What is Redis?: An Overview"
+sidebar_label: "What is Redis?"
 slug: /develop/node/nodecrashcourse/whatisredis
 ---
 
