--- a/docs/develop/node/node-crash-course/redisbloom/index-redisbloom.mdx
+++ b/docs/develop/node/node-crash-course/redisbloom/index-redisbloom.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisbloom
 title: TODO
-sidebar_label: TODO
+sidebar_label: RedisBloom
 slug: /develop/node/nodecrashcourse/redisbloom
 ---
 
