--- a/docs/develop/node/node-crash-course/checkinswithstreams/index-checkinswithstreams.mdx
+++ b/docs/develop/node/node-crash-course/checkinswithstreams/index-checkinswithstreams.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-checkinswithstreams
-title: TODO
+title: Processing Checkins with Redis Streams
 sidebar_label: Checkins with Streams
 slug: /develop/node/nodecrashcourse/checkinswithstreams
 ---
