--- a/docs/develop/node/node-crash-course/coursewrapup/index-coursewrapup.mdx
+++ b/docs/develop/node/node-crash-course/coursewrapup/index-coursewrapup.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-coursewrapup
-title: TODO
+title: Course Wrap Up
 sidebar_label: Wrap Up
 slug: /develop/node/nodecrashcourse/coursewrapup
 ---
