--- a/docs/develop/node/node-crash-course/domainobjectswithhashes/index-domainobjectswithhashes.mdx
+++ b/docs/develop/node/node-crash-course/domainobjectswithhashes/index-domainobjectswithhashes.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-domainobjectswithhashes
-title: TODO
+title: Managing Domain Objects with Redis Hashes
 sidebar_label: Domain Objects with Hashes
 slug: /develop/node/nodecrashcourse/domainobjectswithhashes
 ---
