--- a/docs/develop/node/node-crash-course/introducingredisinsight/index-introducingredisinsight.mdx
+++ b/docs/develop/node/node-crash-course/introducingredisinsight/index-introducingredisinsight.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-introducingredisinsight
-title: TODO
+title: Introducing RedisInsight
 sidebar_label: Introducing RedisInsight
 slug: /develop/node/nodecrashcourse/introducingredisinsight
 ---
