--- a/docs/develop/node/node-crash-course/introductiontomodules/index-introductiontomodules.mdx
+++ b/docs/develop/node/node-crash-course/introductiontomodules/index-introductiontomodules.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-introductiontomodules
-title: TODO
+title: Introduction to Redis Modules
 sidebar_label: Introduction to Modules
 slug: /develop/node/nodecrashcourse/introductiontomodules
 ---
