--- a/docs/develop/node/node-crash-course/managingsuccess/index-managingsuccess.mdx
+++ b/docs/develop/node/node-crash-course/managingsuccess/index-managingsuccess.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-managingsuccess
-title: TODO
+title: Managing Success with Redis
 sidebar_label: Managing Success
 slug: /develop/node/nodecrashcourse/managingsuccess
 ---
