--- a/docs/develop/node/node-crash-course/redisbloom/index-redisbloom.mdx
+++ b/docs/develop/node/node-crash-course/redisbloom/index-redisbloom.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-redisbloom
-title: TODO
+title: Preventing Duplicate Checkins with RedisBloom
 sidebar_label: RedisBloom
 slug: /develop/node/nodecrashcourse/redisbloom
 ---
