--- a/docs/develop/node/node-crash-course/redisearch/index-redisearch.mdx
+++ b/docs/develop/node/node-crash-course/redisearch/index-redisearch.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-redisearch
-title: TODO
+title: Indexing and Querying with RediSearch
 sidebar_label: RediSearch
 slug: /develop/node/nodecrashcourse/redisearch
 ---
