--- a/docs/develop/node/node-crash-course/redisjson/index-redisjson.mdx
+++ b/docs/develop/node/node-crash-course/redisjson/index-redisjson.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-redisjson
-title: TODO
+title: Managing Document Data with RedisJSON
 sidebar_label: RedisJSON
 slug: /develop/node/nodecrashcourse/redisjson
 ---
