--- a/docs/develop/node/node-crash-course/runningtheapplication/index-runningtheapplication.mdx
+++ b/docs/develop/node/node-crash-course/runningtheapplication/index-runningtheapplication.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-runningtheapplication
-title: TODO
+title: Up and Running with the Sample Application
 sidebar_label: Running the Application
 slug: /develop/node/nodecrashcourse/runningtheapplication
 ---
