--- a/docs/develop/node/node-crash-course/sampleapplicationoverview/index-sampleapplicationoverview.mdx
+++ b/docs/develop/node/node-crash-course/sampleapplicationoverview/index-sampleapplicationoverview.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-sampleapplicationoverview
-title: TODO
+title: Sample Application Overview
 sidebar_label: Sample Application Overview
 slug: /develop/node/nodecrashcourse/sampleapplicationoverview
 ---
