--- a/docs/develop/node/node-crash-course/sessionstorage/index-sessionstorage.mdx
+++ b/docs/develop/node/node-crash-course/sessionstorage/index-sessionstorage.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-sessionstorage
-title: TODO
+title: Scaling an Express Application with Redis as a Session Store
 sidebar_label: Session Storage
 slug: /develop/node/nodecrashcourse/sessionstorage
 ---
