--- a/docs/develop/node/node-crash-course/advancedstreams/index-advancedstreams.mdx
+++ b/docs/develop/node/node-crash-course/advancedstreams/index-advancedstreams.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-advancedstreams
-title: TODO
+title: "Advanced Streams: Parallel Processing Checkins with Consumer Groups"
 sidebar_label: Advanced Streams
 slug: /develop/node/nodecrashcourse/advancedstreams
 ---
