--- a/docs/develop/node/node-crash-course/caching/index-caching.mdx
+++ b/docs/develop/node/node-crash-course/caching/index-caching.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-caching
-title: TODO
+title: Caching with Redis and Express Middleware
 sidebar_label: Caching
 slug: /develop/node/nodecrashcourse/caching
 ---
