--- a/docs/develop/node/node-crash-course/redisbloom/index-redisbloom.mdx
+++ b/docs/develop/node/node-crash-course/redisbloom/index-redisbloom.mdx
@@ -7,6 +7,10 @@ slug: /develop/node/nodecrashcourse/redisbloom
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
+<div class="text--center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Ik1WXPX3WNU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 TODO content.
 
 ## TODO Subheader
