--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -1,193 +1,34 @@
 ---
 id: index-node
-title: Node.js and Redis
-sidebar_label: Node.js
-slug: /develop/node/
+title: NodeJS and Redis 
+sidebar_label: Overview
+slug: /develop/node
 ---
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
-Find tutorials, examples and technical articles that will help you to develop with Redis and Node.js/JavaScript.
-
-## Getting Started
-
-Redis is a great database for use with Node.js. Both Redis Node.js share similar type conventions and threading models, which makes for a very predictable development experience. By pairing Node.js & Redis together you can achieve a scalable and productive development platform.
-
-Redis Node.js has two primary clients available [node_redis](https://github.com/NodeRedis/node_redis) and [ioredis](https://github.com/luin/ioredis). Both are available through npm. Both clients have pros and cons, but we generally suggest node_redis, as it has wide support for Redis modules, it is easily extensible and widely used. Ioredis has better integrated support for the Redis Enterprise Cluster API, but this is only relevant if you're specifically using [the Cluster API topology](https://redislabs.com/redis-enterprise/technology/linear-scaling-redis-enterprise/) instead of the more common Proxy topology. Node_redis’ support for the Cluster API is provided by an additional shim, redis-clustr. Node_redis has built-in support for Redis Enterprise features such as [Active Active geo distribution](https://redislabs.com/redis-enterprise/technology/active-active-geo-distribution/), allowing you to have one database that spans multiple clusters. Node_redis also supports Redis-on-Flash which enables extending your database into Flash SSD storage for warm values and DRAM for hot values. Nodejs redis enables you to integrate such features.
-
-The Node.js community has built many client libraries that you can find [here](https://redis.io/clients#nodejs). 
-For your first steps with Node.js and Redis, this article will show how to use the recommended libraries: [ioredis](https://github.com/luin/ioredis) and [node-redis](https://github.com/NodeRedis/node-redis).
-
-<Tabs
-  defaultValue="ioredis"
-  values={[
-    {label: 'IO redis', value: 'ioredis'},
-    {label: 'Node Redis', value: 'node_redis'},
-  ]}>
-    <TabItem value="ioredis"> 
 
 
-#### Step 1. Install the ioredis library using `npm` (or `yarn`)
-
-  ```bash
-   npm install ioredis
-  ```
-
-
-#### Step 2. Write your application code
-
-   ```javascript
-    const Redis = require("ioredis");
-    const redis = new Redis(6379, "localhost");
-
-    redis.set("mykey", "Hello from io-redis!");
-    redis.get("mykey", function(err, result){
-        if (err) { throw err; }
-    
-        console.log(result);
-    });
-
-    // use the promise instead of callback
-    redis.get("mykey").then(function (result) {
-        console.log(result);
-    });
-
-    redis.zadd("vehicles", 0, "car", 0, "bike");
-    redis.zrange("vehicles", 0, -1, "WITHSCORES").then((res) => console.log(res));
-
-  ```
-
-Find more information about Redis & io-redis connections in the "[Redis Connect](https://github.com/redis-developer/redis-connect/tree/master/node.js/ioredis)" repository.
-
-  </TabItem>
-  <TabItem value="node_redis">
-
-
-#### Step 1. Install the Redis library using `npm` (or `yarn`)
-
-  ```bash
-    npm install redis
-  ```
-
-
-#### Step 2. Write your application code
-
-  ```javascript
-    const redis = require("redis");
-    
-    const client = redis.createClient ({
-        port : 6379,
-        host : "localhost"
-    });
-
-    client.set("mykey", "Hello from node-redis!");
-    client.get("mykey", function(err, result){
-        if (err) { throw err; }
-    
-        console.log(result);
-    });
-
-    const vehiclesData = ["vehicles", 4, "car", 2, "bike"];
-    client.zadd(vehiclesData, function(addError, addResponse) {
-        if (addError) { throw addError; }
-
-        console.log("added " + addResponse + " items.");
-
-        const query = ["vehicles", 0, -1];
-        client.zrange(query, function(rangeError, rangeResponse) {
-            if (rangeError) {throw rangeError;}
-            console.log("vehicles", rangeResponse);
-        });
-    });
-
-  ```
-
-Find more information about Redis & node-redis connections in the "[Redis Connect](https://github.com/redis-developer/redis-connect/tree/master/node.js/node-redis)" repository.
-
-
-  </TabItem>
-</Tabs>
-
----
-
-###  Redis Marketplace
-
-Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
-Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com).
-
-<div class="row text--center">
-
-<div class="col ">
-<div className="ri-container">
-
-#### Hacker News Clone in NodeJS
-
-![marketplace](images/hackernews.png)
-
-[A Hacker News Clone project](https://marketplace.redislabs.com/?id=project%3Aredis-hacker-news-demo) built in NextJS, NodeJS and Express based on RediSearch & RedisJSON
-</div>
-</div>
-
-<div class="col">
-<div className="ri-container">
-
-#### Shopping Cart app in NodeJS
-
-![marketplace](images/shoppingcartnodejs.png)
-
-[Shopping Cart app in NodeJS](https://marketplace.redislabs.com/?id=project%3Abasic-redis-shopping-chart-nodejs) module functionalities
-</div>
-</div>
-</div>
-
----
-
-
-
-
-### More Developer Resources
+The following links provides you with the available options to develop your application using NodeJS and Redis
 
 <div class="row">
 
-<div class="col">
-
-#### Sample Code
-
-**[Basic Redis Caching](https://developer.redislabs.com/howtos/caching/)**
-This application calls the GitHub API and caches the results into Redis.
-
-**[Redis Rate-Limiting](https://developer.redislabs.com/howtos/ratelimiting/)**
-This is a very simple app that demonstrates rate-limiting feature using Redis.
-
-**[Notifications with WebSocket, Vue & Redis](https://github.com/redis-developer/redis-websockets-vue-notifications)**
-This project allows you to push notifications in a Vue application from a Redis `PUBLISH` using WebSockets.
-
-
-
+ <div class="col">
+     <RedisCard
+        title="Getting Started"
+        description="Node.js and Redis"
+        page="/develop/node/gettingstarted"
+        />
 </div>
 
-<div class="col">
-
-#### Technical Articles & Videos
-
-**[Redis Rapid Tips: ioredis](https://www.youtube.com/watch?v=H6rikGCYPUk)** (YouTube)
-
-**[Mapping Objects between Node and Redis](https://www.youtube.com/watch?v=dukkMLbzPfA)** (YouTube)
-
-</div>
+  <div class="col">
+     <RedisCard
+        title="Node.js Crash Course"
+        description="Node.js Crash Course"
+        page="/develop/node/node-crash-course"
+        />
+  </div>
 </div>
 
----
 
-### Redis University
 
-### [Redis for JavaScript Developers](https://university.redislabs.com/courses/ru102js/)
-
-Build full-fledged Redis applications with Node.js and Express.
-
-<div class="text--center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Ik1WXPX3WNU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
