Adds crash course content.

--- a/docs/develop/node/node-crash-course/welcome/index-welcome.mdx
+++ b/docs/develop/node/node-crash-course/welcome/index-welcome.mdx
@@ -11,16 +11,36 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 <iframe width="560" height="315" src="https://www.youtube.com/embed/1t7uqAwG-DY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
-TODO content.
+Welcome to the Node.js Redis Crash Course.  I'm [Simon Prickett](https://twitter.com/simon_prickett), Senior Curriculum Engineer at Redis Labs.  
 
-## TODO Subheader
+In this course, you'll learn about using Redis with Node.js through a blend of video and text-based training.  You can also get hands-on with some optional workshop exercises where you'll add new functionality to an existing Node.js application.  
 
-TODO content.
+## Learning Objectives
 
-### TODO Another Subheader
+By following the materials in this course, you can expect to learn about:
 
-TODO content.
+* What Redis is and where to find it.
+* The benefits of adding Redis to your stack, when and how to use it.
+* How to leverage Redis in the context of a modern Node.js Express application with the ioredis client.
+* Using RedisInsight to browse and manage a Redis instance.
+* Modeling domain objects with Redis Hashes, querying them with RediSearch.
+* Storing and querying document data with the RedisJSON module.
+* Asynchronous messaging and fast data ingestion with Redis Streams.
+* Speeding up response times with Redis caching and Express middleware.
+* Scaling your application using Redis as a session store for Express.
 
-### Further References
+## Software Prerequisites
 
-TODO content.
+To get the most from this course, you'll need a machine that can run Node.js applications, plus Docker as we'll be using a container that includes Redis and the required add-on modules for this course.
+
+You'll need the following installed on your machine:
+
+* [Docker](https://www.docker.com/) (you'll need the docker-compose command)
+* [Node.js](https://nodejs.org/) (use the current Long Term Stable - LTS - version)
+* [git command line tools](https://git-scm.com/downloads)
+* Your favorite IDE (we like [VSCode](https://code.visualstudio.com/), but anything you're comfortable with works)
+* [Postman](https://www.postman.com/) - we're going to make some API calls and Postman makes that easy.
+
+## Let's Learn Together
+
+Sign up for the [Redis Discord](https://discord.gg/redis) where you can ask me anything about the course!
