Adds Managing Success overview content.

--- a/docs/develop/node/node-crash-course/managingsuccess/index-managingsuccess.mdx
+++ b/docs/develop/node/node-crash-course/managingsuccess/index-managingsuccess.mdx
@@ -7,16 +7,14 @@ slug: /develop/node/nodecrashcourse/managingsuccess
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-TODO content.
+We launched our checkin application, and it's been an incredible success!  Users love it and are checking in to all of the locations that signed up to be part of it!
 
-## TODO Subheader
+In the next few modules, we'll look at how Redis can help us manage growth as we gain more users, process more checkins, and increase our usage of external services.
 
-TODO content.
+We'll look at:
 
-### TODO Another Subheader
+* Using Redis as a cache in an Express application.
+* Scaling horizontally by using Redis as a session store for Express.
+* Scaling checkin processing with Redis Streams consumer groups.
+* Preventing duplicate checkins using probabilistic data structures and the RedisBloom module.
 
-TODO content.
-
-### Further References
-
-TODO content.
